Color contrast fix

--- a/less/ku-gridboxes-bootstrap.less
+++ b/less/ku-gridboxes-bootstrap.less
@@ -408,7 +408,7 @@
 
         .header-small {
           font-weight: bold;
-          color: @gray-light;
+          color: @gray-666;
           text-transform: uppercase;
           letter-spacing: 0.4px;
           margin: 5px 0;
