--- a/less/ku-legacy.less
+++ b/less/ku-legacy.less
@@ -151,3 +151,8 @@ p[align="right"] {
     content: '\2014 \00A0';
   }
 }
+
+// Remove strong font-weight in accordion headers
+.panel-accordion>.panel-heading .panel-title a>strong {
+  font-weight: inherit!important;
+}
