--- a/less/ku-mobile-menu.less
+++ b/less/ku-mobile-menu.less
@@ -6,12 +6,14 @@
   #mobileleftmenu {
     display: none;
   }
+
   .mm-page {
     // Keep flexbox working after Mmenu is injected
     height: 100%;
   }
 }
 /* KU theme colors for jQuery MMenu */
+
 #mobileleftmenu {
   //background-color: @white-color;
   color: @text-color;
@@ -205,8 +207,8 @@
   }
 
   .mm-listview {
-    > .local1_mmenu,
-    > .local2_mmenu {
+    > .local2_mmenu,
+    > .local1_mmenu {
       > .mm-btn_next {
         &::after {
           color: @white-color;
@@ -249,6 +251,15 @@
     &.mm-listitem_opened {
       & > a:not(.mm-btn_next) {
         font-weight: 700;
+      }
+    }
+  }
+  // Local custom left menu items
+  .local2_mmenu {
+    &.mm-listitem {
+      > p {
+        padding-left: 20px;
+        padding-right: 10px;
       }
     }
   }
